--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Valerio",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "express": "^4.16.2"
   }
